oitavo exercício feito

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Project Pixels Art</title>
 </head>
+
 <body>
-    <h1 id='title'> Paleta de Cores</h1>
-    <div id='color-palette'>
-        <div class='color black'></div>
-        <div class='color lilac'></div>
-        <div class='color blue'></div>
-        <div class='color pink'></div>
-    </div>
+    <header>
+        <h1 id='title'> Paleta de Cores</h1>
+        <div id='color-palette'>
+            <div class='color black'></div>
+            <div class='color lilac'></div>
+            <div class='color blue'></div>
+            <div class='color pink'></div>
+        </div>
+    </header>
     <div id='pixel-board'></div>
     <script src="script.js"></script>
 </body>
+
 </html>
