nono exercício feito

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div class='color pink'></div>
         </div>
     </header>
+    <button id='clear-board'>Limpar</button>
     <div id='pixel-board'></div>
+    <h2>pressione a tecla <strong>shift para limpar 1pixel</strong></h2>
     <script src="script.js"></script>
 </body>
 
