estilização do site

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Montserrat&display=swap" rel="stylesheet">
     <title>Project Pixels Art</title>
 </head>
 
@@ -21,7 +24,7 @@
     </header>
     <button id='clear-board'>Limpar</button>
     <div id='pixel-board'></div>
-    <h2>pressione a tecla <strong>shift para limpar 1pixel</strong></h2>
+    <h2 id='subtitle'>Pressione a tecla shift para limpar 1 pixel</h2>
     <script src="script.js"></script>
 </body>
 
