--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
             <div class='color lilac'></div>
             <div class='color blue'></div>
             <div class='color pink'></div>
-        </div>
     </header>
+    </div>
+    <div id='more-pixels'>
+        <input type='number' name='pixels' placeholder='número de pixels' id='board-size'>
+        <button id='generate-board' type='submit'>VQV</button>
+    </div>
     <button id='clear-board'>Limpar</button>
     <div id='pixel-board'></div>
     <h2 id='subtitle'>Pressione a tecla shift para limpar 1 pixel</h2>
