--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     </div>
     <div id='more-pixels'>
-        <input type='number' name='pixels' placeholder='número de pixels' id='board-size'>
+        <input type='number' name='pixels' placeholder='número de pixels' id='board-size' max="50" min="1">
         <button id='generate-board' type='submit'>VQV</button>
     </div>
     <button id='clear-board'>Limpar</button>
